; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_dev.c___dev_addr_sync.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_dev.c___dev_addr_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dev_addr_list = type { i32, i32, i32, i32, %struct.dev_addr_list* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__dev_addr_sync(%struct.dev_addr_list** %0, i32* %1, %struct.dev_addr_list** %2, i32* %3) #0 {
  %5 = alloca %struct.dev_addr_list**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.dev_addr_list**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.dev_addr_list*, align 8
  %10 = alloca %struct.dev_addr_list*, align 8
  %11 = alloca i32, align 4
  store %struct.dev_addr_list** %0, %struct.dev_addr_list*** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.dev_addr_list** %2, %struct.dev_addr_list*** %7, align 8
  store i32* %3, i32** %8, align 8
  store i32 0, i32* %11, align 4
  %12 = load %struct.dev_addr_list**, %struct.dev_addr_list*** %7, align 8
  %13 = load %struct.dev_addr_list*, %struct.dev_addr_list** %12, align 8
  store %struct.dev_addr_list* %13, %struct.dev_addr_list** %9, align 8
  br label %14

14:                                               ; preds = %70, %4
  %15 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %16 = icmp ne %struct.dev_addr_list* %15, null
  br i1 %16, label %17, label %72

17:                                               ; preds = %14
  %18 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %19 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %18, i32 0, i32 4
  %20 = load %struct.dev_addr_list*, %struct.dev_addr_list** %19, align 8
  store %struct.dev_addr_list* %20, %struct.dev_addr_list** %10, align 8
  %21 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %22 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %45, label %25

25:                                               ; preds = %17
  %26 = load %struct.dev_addr_list**, %struct.dev_addr_list*** %5, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %29 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %28, i32 0, i32 3
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %32 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @__dev_addr_add(%struct.dev_addr_list** %26, i32* %27, i32 %30, i32 %33, i32 0)
  store i32 %34, i32* %11, align 4
  %35 = load i32, i32* %11, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %25
  br label %72

38:                                               ; preds = %25
  %39 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %40 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %39, i32 0, i32 0
  store i32 1, i32* %40, align 8
  %41 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %42 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %42, align 4
  br label %70

45:                                               ; preds = %17
  %46 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %47 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = icmp eq i32 %48, 1
  br i1 %49, label %50, label %69

50:                                               ; preds = %45
  %51 = load %struct.dev_addr_list**, %struct.dev_addr_list*** %5, align 8
  %52 = load i32*, i32** %6, align 8
  %53 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %54 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %53, i32 0, i32 3
  %55 = load i32, i32* %54, align 4
  %56 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %57 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %56, i32 0, i32 2
  %58 = load i32, i32* %57, align 8
  %59 = call i32 @__dev_addr_delete(%struct.dev_addr_list** %51, i32* %52, i32 %55, i32 %58, i32 0)
  %60 = load %struct.dev_addr_list**, %struct.dev_addr_list*** %7, align 8
  %61 = load i32*, i32** %8, align 8
  %62 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %63 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %62, i32 0, i32 3
  %64 = load i32, i32* %63, align 4
  %65 = load %struct.dev_addr_list*, %struct.dev_addr_list** %9, align 8
  %66 = getelementptr inbounds %struct.dev_addr_list, %struct.dev_addr_list* %65, i32 0, i32 2
  %67 = load i32, i32* %66, align 8
  %68 = call i32 @__dev_addr_delete(%struct.dev_addr_list** %60, i32* %61, i32 %64, i32 %67, i32 0)
  br label %69

69:                                               ; preds = %50, %45
  br label %70

70:                                               ; preds = %69, %38
  %71 = load %struct.dev_addr_list*, %struct.dev_addr_list** %10, align 8
  store %struct.dev_addr_list* %71, %struct.dev_addr_list** %9, align 8
  br label %14

72:                                               ; preds = %37, %14
  %73 = load i32, i32* %11, align 4
  ret i32 %73
}

declare dso_local i32 @__dev_addr_add(%struct.dev_addr_list**, i32*, i32, i32, i32) #1

declare dso_local i32 @__dev_addr_delete(%struct.dev_addr_list**, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
